# k5_v2_hello

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
App/: CMakeLists.txt  main.c  main_rtos.c  serial_msg.c  serial_msg.h  serial_tx.c  serial_tx.h
Core/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h
Core/Src/: app_freertos.c  core_main.c  startup_py32f030xx.s
Utilities/: CMakeLists.txt
serialtool/: _prog.py  cli.py  msg.py
